feat(hq): server usage charts, hosting contract API fix, nginx/cors updates
- Server usage: daily/weekly/monthly traffic + memory peak, DB V45, scheduled OSHI collection, GET /api/hq/serverUsage
- Fix HqServerManageService: include serverManageContract in buildSummary response
- Org unit domain URLs (V43), hq server manage contract (V44), migrate script update
- Site: NOTI-style HQ server monitor UI, Chart.js, hq-server-monitor.css
- Security/CORS/nginx: API chain and proxy header tweaks
- Cursor rule: bootJar + user build notification

Made-with: Cursor